--- a/net-libs/libproxy/ChangeLog
+++ b/net-libs/libproxy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libproxy
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.81 2012/10/17 02:06:27 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.82 2012/10/17 11:06:57 ago Exp $
+
+  17 Oct 2012; Agostino Sarubbo <ago@gentoo.org> libproxy-0.4.10.ebuild:
+  Stable for amd64, wrt bug #438146
 
   17 Oct 2012; Anthony G. Basile <blueness@gentoo.org> libproxy-0.4.10.ebuild:
   stable ppc ppc64, bug #438146
