--- a/x11-misc/qtfm/ChangeLog
+++ b/x11-misc/qtfm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/qtfm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/qtfm/ChangeLog,v 1.10 2012/06/20 06:54:02 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/qtfm/ChangeLog,v 1.11 2012/10/20 08:53:49 ssuominen Exp $
+
+  20 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
+  Maintained now by qt@ and desktop-misc@
 
   20 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> -qtfm-5.3.ebuild:
   old
