--- a/app-admin/syslogread/ChangeLog
+++ b/app-admin/syslogread/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/syslogread
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/syslogread/ChangeLog,v 1.11 2012/05/31 02:43:57 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/syslogread/ChangeLog,v 1.12 2012/10/20 09:24:56 ago Exp $
+
+  20 Oct 2012; Agostino Sarubbo <ago@gentoo.org> syslogread-0.92.ebuild:
+  Comment keepdir since syslog now is a file
 
   31 May 2012; Zac Medico <zmedico@gentoo.org> syslogread-0.92.ebuild:
   inherit user for enewgroup and enewuser
@@ -41,4 +44,3 @@
   +files/0.92/syslogread.init, +files/0.92/syslogread.run,
   +files/0.92/syslogread-log.run, +metadata.xml, +syslogread-0.92.ebuild:
   initial import
-
