--- a/x11-misc/qtfm/ChangeLog
+++ b/x11-misc/qtfm/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/qtfm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/qtfm/ChangeLog,v 1.11 2012/10/20 08:53:49 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/qtfm/ChangeLog,v 1.12 2012/10/20 14:37:15 jer Exp $
+
+*qtfm-5.5 (20 Oct 2012)
+
+  20 Oct 2012; Jeroen Roovers <jer@gentoo.org> +qtfm-5.5.ebuild:
+  Version bump by Franz Fellner (bug #439034).
 
   20 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
   Maintained now by qt@ and desktop-misc@
