--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7045 2012/10/20 07:27:13 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7046 2012/10/20 14:56:18 jer Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  20 Oct 2012; Jeroen Roovers <jer@gentoo.org> thirdpartymirrors:
+  Remove one faulty Opera mirror.
 
   20 Oct 2012; Ben de Groot <yngwin@gentoo.org> updates/4Q-2012:
   Move x11-wm/razorqt and x11-misc/lightdm-razorqt-greeter to new locations in
