--- a/dev-python/python-exec/ChangeLog
+++ b/dev-python/python-exec/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/python-exec
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-exec/ChangeLog,v 1.5 2012/10/17 11:46:42 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-exec/ChangeLog,v 1.6 2012/10/20 16:20:06 jer Exp $
+
+  20 Oct 2012; Jeroen Roovers <jer@gentoo.org> python-exec-0.1.ebuild:
+  Marked ~hppa (bug #438388).
 
   17 Oct 2012;  <naota@gentoo.org> python-exec-0.1.ebuild:
   Add ~x86-fbsd. #438388
