--- a/app-emulation/qemu/ChangeLog
+++ b/app-emulation/qemu/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/qemu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.127 2012/10/11 09:40:02 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.128 2012/10/20 16:23:41 cardoe Exp $
+
+*qemu-1.1.2-r1 (20 Oct 2012)
+
+  20 Oct 2012; Doug Goldstein <cardoe@gentoo.org> +qemu-1.1.2-r1.ebuild:
+  Restore the Gentoo patchset for qemu-kvm.
 
   11 Oct 2012; Justin Lecher <jlec@gentoo.org> metadata.xml:
   Add  better USE description for jpeg and png
