--- a/app-emulation/qemu/ChangeLog
+++ b/app-emulation/qemu/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/qemu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.129 2012/10/20 16:27:36 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.130 2012/10/20 16:28:36 cardoe Exp $
+
+  20 Oct 2012; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
+  Remove unused USE flag descriptions.
 
   20 Oct 2012; Doug Goldstein <cardoe@gentoo.org> qemu-1.2.0.ebuild:
   Add initial qemu-kvm 1.2.0 that is unkeyworded. It is missing the Gentoo
