--- a/dev-python/python-exec/ChangeLog
+++ b/dev-python/python-exec/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/python-exec
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-exec/ChangeLog,v 1.6 2012/10/20 16:20:06 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-exec/ChangeLog,v 1.7 2012/10/20 16:49:48 armin76 Exp $
+
+  20 Oct 2012; Raúl Porcel <armin76@gentoo.org> python-exec-0.1.ebuild:
+  Add ~alpha/~ia64/~s390/~sh/~sparc wrt 438388
 
   20 Oct 2012; Jeroen Roovers <jer@gentoo.org> python-exec-0.1.ebuild:
   Marked ~hppa (bug #438388).
