--- a/x11-libs/libdrm/ChangeLog
+++ b/x11-libs/libdrm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libdrm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdrm/ChangeLog,v 1.201 2012/09/01 11:08:07 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdrm/ChangeLog,v 1.202 2012/10/20 23:25:50 ryao Exp $
+
+  20 Oct 2012; Richard Yao <ryao@gentoo.org> libdrm-2.4.37.ebuild,
+  libdrm-2.4.38.ebuild, libdrm-2.4.39.ebuild:
+  Drop keywords amd64-fbsd and x86-fbsd, bug #433403
 
 *libdrm-2.4.39 (01 Sep 2012)
 
