--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,14 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7046 2012/10/20 14:56:18 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7047 2012/10/20 23:41:08 blueness Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  20 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  hardened/linux/uclibc/packages.build:
+  Reduce packages.build for hardened/linux/uclibc profiles
 
   20 Oct 2012; Jeroen Roovers <jer@gentoo.org> thirdpartymirrors:
   Remove one faulty Opera mirror.
