--- a/games-fps/warsow/ChangeLog
+++ b/games-fps/warsow/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for games-fps/warsow
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/warsow/ChangeLog,v 1.42 2012/10/17 03:07:16 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/warsow/ChangeLog,v 1.43 2012/10/21 00:37:24 hasufell Exp $
+
+*warsow-1.02 (21 Oct 2012)
+
+  21 Oct 2012; Julian Ospald <hasufell@gentoo.org> +warsow-1.02.ebuild:
+  version bump
 
   17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> warsow-1.0.ebuild:
   x86 stable wrt bug #436808
