--- a/net-libs/libproxy/ChangeLog
+++ b/net-libs/libproxy/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/libproxy
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.86 2012/10/19 06:35:28 nativemad Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.87 2012/10/21 02:55:12 creffett Exp $
+
+*libproxy-0.4.10-r1 (21 Oct 2012)
+
+  21 Oct 2012; Chris Reffett <creffett@gentoo.org> +libproxy-0.4.10-r1.ebuild:
+  Add automoc to DEPEND per bug 438714
 
   19 Oct 2012; Andreas Schuerch <nativemad@gentoo.org> libproxy-0.4.10.ebuild:
   x86 stable, see bug 438146
