--- a/net-libs/libproxy/ChangeLog
+++ b/net-libs/libproxy/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/libproxy
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.87 2012/10/21 02:55:12 creffett Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.88 2012/10/21 03:44:48 tetromino Exp $
+
+  21 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  libproxy-0.4.10.ebuild, -libproxy-0.4.10-r1.ebuild:
+  Add the automoc dependency to 0.4.10, make it conditional on USE=kde, remove
+  0.4.10-r1 ebuild since it differs from 0.4.10 only in the dependency list.
 
 *libproxy-0.4.10-r1 (21 Oct 2012)
 
