--- a/net-analyzer/munin/ChangeLog
+++ b/net-analyzer/munin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/munin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/munin/ChangeLog,v 1.110 2012/10/21 04:14:19 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/munin/ChangeLog,v 1.111 2012/10/21 04:29:51 flameeyes Exp $
+
+  21 Oct 2012; Diego E. Pettenò <flameeyes@gentoo.org> +files/munin.env,
+  munin-2.0.7-r2.ebuild:
+  Add a CONFIG_PROTECT setting for the munin-asyncd allowed keys.
 
   21 Oct 2012; Diego E. Pettenò <flameeyes@gentoo.org> munin-2.0.7-r2.ebuild:
   Make sure to set the correct owner to /var/spool/munin-async out of the
