--- a/net-analyzer/munin/ChangeLog
+++ b/net-analyzer/munin/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/munin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/munin/ChangeLog,v 1.112 2012/10/21 05:26:25 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/munin/ChangeLog,v 1.113 2012/10/21 05:39:07 flameeyes Exp $
+
+*munin-2.0.7-r4 (21 Oct 2012)
+
+  21 Oct 2012; Diego E. Pettenò <flameeyes@gentoo.org> +munin-2.0.7-r4.ebuild,
+  -munin-2.0.7-r3.ebuild:
+  Revert to patchset 3.
 
 *munin-2.0.7-r3 (21 Oct 2012)
 
