--- a/net-analyzer/munin/ChangeLog
+++ b/net-analyzer/munin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/munin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/munin/ChangeLog,v 1.113 2012/10/21 05:39:07 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/munin/ChangeLog,v 1.114 2012/10/21 06:00:13 flameeyes Exp $
+
+  21 Oct 2012; Diego E. Pettenò <flameeyes@gentoo.org>
+  files/munin-asyncd.init.2:
+  Fix init script's spooldir path.
 
 *munin-2.0.7-r4 (21 Oct 2012)
 
