--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,14 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7047 2012/10/20 23:41:08 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7048 2012/10/21 07:47:40 tetromino Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  21 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org> package.mask:
+  Temporary mask to allow gradual addition of gstreamer-0.10.36 and its
+  numerous plugins. Will be removed once all compatible plugins are in place.
 
   20 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   hardened/linux/uclibc/packages.build:
