--- a/app-cdr/xfburn/ChangeLog
+++ b/app-cdr/xfburn/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-cdr/xfburn
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/xfburn/ChangeLog,v 1.50 2012/10/21 09:26:14 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/xfburn/ChangeLog,v 1.51 2012/10/21 09:27:26 ssuominen Exp $
+
+  21 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> -xfburn-0.4.3-r3.ebuild,
+  -files/xfburn-0.4.3-gobject_h.patch,
+  -files/xfburn-0.4.3-update_desktop_entry.patch:
+  old
 
 *xfburn-0.4.3_p20121021 (21 Oct 2012)
 
