--- a/x11-misc/xscreensaver/ChangeLog
+++ b/x11-misc/xscreensaver/ChangeLog
@@ -1,6 +1,17 @@
 # ChangeLog for x11-misc/xscreensaver
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xscreensaver/ChangeLog,v 1.315 2012/07/27 18:27:34 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xscreensaver/ChangeLog,v 1.316 2012/10/21 10:39:23 ssuominen Exp $
+
+*xscreensaver-5.20 (21 Oct 2012)
+
+  21 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
+  +xscreensaver-5.20.ebuild,
+  +files/xscreensaver-5.20-blurb-hndl-test-passwd.patch,
+  +files/xscreensaver-5.20-check-largefile-support.patch,
+  +files/xscreensaver-5.20-conf264.patch,
+  +files/xscreensaver-5.20-test-passwd-segv-tty.patch,
+  +files/xscreensaver-5.20-tests-miscfix.patch:
+  Version bump.
 
 *xscreensaver-5.19 (27 Jul 2012)
 
