--- a/x11-misc/xscreensaver/ChangeLog
+++ b/x11-misc/xscreensaver/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/xscreensaver
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xscreensaver/ChangeLog,v 1.316 2012/10/21 10:39:23 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xscreensaver/ChangeLog,v 1.317 2012/10/21 10:41:07 ssuominen Exp $
+
+  21 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
+  -xscreensaver-5.18.ebuild, -files/xscreensaver-5.18-sonar-compile.patch,
+  -xscreensaver-5.19.ebuild:
+  old
 
 *xscreensaver-5.20 (21 Oct 2012)
 
