--- a/www-client/midori/ChangeLog
+++ b/www-client/midori/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-client/midori
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/midori/ChangeLog,v 1.98 2012/09/20 08:30:56 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/midori/ChangeLog,v 1.99 2012/10/21 11:18:48 ssuominen Exp $
+
+  21 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> -midori-0.4.3.ebuild,
+  -midori-0.4.6.ebuild:
+  old
 
 *midori-0.4.7 (20 Sep 2012)
 
