--- a/sys-kernel/mkinitcpio/ChangeLog
+++ b/sys-kernel/mkinitcpio/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-kernel/mkinitcpio
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mkinitcpio/ChangeLog,v 1.4 2012/07/04 18:17:37 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mkinitcpio/ChangeLog,v 1.5 2012/10/21 13:34:20 ssuominen Exp $
+
+  21 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
+  mkinitcpio-0.9.2-r1.ebuild:
+  Update sys-fs/udev dependency because stable udev was revision bumped.
 
   04 Jul 2012; Michael Weber <xmw@gentoo.org> mkinitcpio-0.9.2-r1.ebuild:
   Adding ~amd64 and ~x86 keywords.
