--- a/app-admin/ansible/ChangeLog
+++ b/app-admin/ansible/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/ansible
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/ansible/ChangeLog,v 1.4 2012/09/19 18:39:03 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/ansible/ChangeLog,v 1.5 2012/10/21 14:48:33 pinkbyte Exp $
+
+*ansible-0.7.1 (21 Oct 2012)
+
+  21 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> -ansible-0.7.ebuild,
+  +ansible-0.7.1.ebuild:
+  Version bump, remove old
 
   19 Sep 2012; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
   Add proxy-maintainers herd
