--- a/games-fps/warsow/ChangeLog
+++ b/games-fps/warsow/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for games-fps/warsow
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/warsow/ChangeLog,v 1.43 2012/10/21 00:37:24 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/warsow/ChangeLog,v 1.44 2012/10/21 15:43:49 hasufell Exp $
+
+  21 Oct 2012; Julian Ospald <hasufell@gentoo.org>
+  +files/warsow-1.02-build.patch:
+  add missing patch wrt #439170
 
 *warsow-1.02 (21 Oct 2012)
 
