--- a/x11-drivers/xf86-video-intel/ChangeLog
+++ b/x11-drivers/xf86-video-intel/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/xf86-video-intel
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-intel/ChangeLog,v 1.106 2012/10/16 22:31:03 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-intel/ChangeLog,v 1.107 2012/10/21 19:25:40 remi Exp $
+
+*xf86-video-intel-2.20.12 (21 Oct 2012)
+
+  21 Oct 2012; Rémi Cardona <remi@gentoo.org>
+  +xf86-video-intel-2.20.12.ebuild:
+  Bump to 2.20.12.
 
 *xf86-video-intel-2.20.10 (16 Oct 2012)
 
