--- a/www-client/firefox/ChangeLog
+++ b/www-client/firefox/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-client/firefox
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/firefox/ChangeLog,v 1.179 2012/10/21 16:14:38 anarchy Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/firefox/ChangeLog,v 1.180 2012/10/21 19:33:59 anarchy Exp $
+
+  21 Oct 2012; <anarchy@gentoo.org> firefox-16.0.1.ebuild:
+  Bump patchset for misc jemalloc-3 fixes
 
 *firefox-16.0.1 (21 Oct 2012)
 *firefox-10.0.9 (21 Oct 2012)
