--- a/mail-client/thunderbird/ChangeLog
+++ b/mail-client/thunderbird/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-client/thunderbird
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/thunderbird/ChangeLog,v 1.169 2012/10/21 16:55:21 anarchy Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/thunderbird/ChangeLog,v 1.170 2012/10/21 19:35:30 anarchy Exp $
+
+  21 Oct 2012; <anarchy@gentoo.org> thunderbird-16.0.1.ebuild:
+  Bump patchset for misc jemalloc-3 fixes
 
 *thunderbird-16.0.1 (21 Oct 2012)
 *thunderbird-10.0.9 (21 Oct 2012)
