--- a/dev-lang/spidermonkey/ChangeLog
+++ b/dev-lang/spidermonkey/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/spidermonkey
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/spidermonkey/ChangeLog,v 1.85 2012/10/21 19:49:10 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/spidermonkey/ChangeLog,v 1.86 2012/10/21 20:20:16 blueness Exp $
+
+  21 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  spidermonkey-1.8.5-r1.ebuild:
+  dropping back to ~arm, bug #420471
 
   21 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   spidermonkey-1.8.5-r1.ebuild:
