--- a/sys-auth/consolekit/ChangeLog
+++ b/sys-auth/consolekit/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sys-auth/consolekit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/ChangeLog,v 1.138 2012/10/21 13:39:37 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/ChangeLog,v 1.139 2012/10/22 00:34:11 williamh Exp $
+
+  22 Oct 2012; William Hubbs <williamh@gentoo.org>
+  consolekit-0.4.5_p20120320-r1.ebuild, consolekit-0.4.5_p20120320.ebuild:
+  Emergency fix: I was told that the revision number 99 in the udev blockers
+  makes it impossible to install consolekit with stable udev when using the
+  desktop profiles.  I have dropped the udev revision number in the blocker to
+  8, which is the last valid stable udev revision instead of 99.
 
   21 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
   consolekit-0.4.5_p20120320.ebuild, consolekit-0.4.5_p20120320-r1.ebuild:
@@ -585,4 +592,3 @@
   24 Mar 2007; Steev Klimaszewski <steev@gentoo.org>
   +files/consolekit-0.1.rc, +metadata.xml, +consolekit-0.2.0.ebuild:
   New package, needed for GDM, but will hopefully soon replace pam_console
-
