--- a/net-analyzer/munin/ChangeLog
+++ b/net-analyzer/munin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/munin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/munin/ChangeLog,v 1.115 2012/10/22 01:57:41 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/munin/ChangeLog,v 1.116 2012/10/22 04:17:11 flameeyes Exp $
+
+  22 Oct 2012; Diego E. Pettenò <flameeyes@gentoo.org>
+  files/munin-asyncd.init.2:
+  Use /var/run directly for the pidfile as this is started by s-s-d anyway.
 
 *munin-2.0.7-r5 (22 Oct 2012)
 
