--- a/www-plugins/adobe-flash/ChangeLog
+++ b/www-plugins/adobe-flash/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-plugins/adobe-flash
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.142 2012/08/17 12:54:01 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.143 2012/10/22 05:27:48 jer Exp $
+
+*adobe-flash-11.2.202.243 (22 Oct 2012)
+
+  22 Oct 2012; Jeroen Roovers <jer@gentoo.org>
+  +adobe-flash-11.2.202.243.ebuild:
+  Version bump (bug #437808).
 
   17 Aug 2012; Tomáš Chvátal <scarabeus@gentoo.org>
   -adobe-flash-11.2.202.236.ebuild:
