--- a/sys-auth/consolekit/ChangeLog
+++ b/sys-auth/consolekit/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-auth/consolekit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/ChangeLog,v 1.139 2012/10/22 00:34:11 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/ChangeLog,v 1.140 2012/10/22 06:55:01 ssuominen Exp $
+
+  22 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
+  consolekit-0.4.5_p20120320.ebuild, consolekit-0.4.5_p20120320-r1.ebuild:
+  Revert last commit. We really don't want anyone using =sys-fs/udev-171* to
+  enable USE="extras" since it's obsolete for a long time now.
 
   22 Oct 2012; William Hubbs <williamh@gentoo.org>
   consolekit-0.4.5_p20120320-r1.ebuild, consolekit-0.4.5_p20120320.ebuild:
