--- a/www-plugins/adobe-flash/ChangeLog
+++ b/www-plugins/adobe-flash/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-plugins/adobe-flash
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.144 2012/10/22 05:35:09 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.145 2012/10/22 08:35:36 ago Exp $
+
+  22 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
+  adobe-flash-11.2.202.243.ebuild:
+  Stable for x86, wrt bug #437808
 
   22 Oct 2012; Jeroen Roovers <jer@gentoo.org> adobe-flash-11.2.202.243.ebuild:
   Shorten two long lines.
