--- a/www-plugins/adobe-flash/ChangeLog
+++ b/www-plugins/adobe-flash/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-plugins/adobe-flash
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.145 2012/10/22 08:35:36 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/adobe-flash/ChangeLog,v 1.146 2012/10/22 08:36:03 ago Exp $
+
+  22 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
+  adobe-flash-11.2.202.243.ebuild:
+  Stable for amd64, wrt bug #437808
 
   22 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
   adobe-flash-11.2.202.243.ebuild:
