--- a/mail-mta/msmtp/ChangeLog
+++ b/mail-mta/msmtp/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for mail-mta/msmtp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/msmtp/ChangeLog,v 1.135 2012/09/04 20:09:00 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/msmtp/ChangeLog,v 1.136 2012/10/22 09:35:22 radhermit Exp $
+
+*msmtp-1.4.30 (22 Oct 2012)
+
+  22 Oct 2012; Tim Harder <radhermit@gentoo.org> +msmtp-1.4.30.ebuild:
+  Version bump.
 
   04 Sep 2012; Tim Harder <radhermit@gentoo.org> -msmtp-1.4.27.ebuild:
   Remove old.
