--- a/mail-mta/msmtp/ChangeLog
+++ b/mail-mta/msmtp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-mta/msmtp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/msmtp/ChangeLog,v 1.136 2012/10/22 09:35:22 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/msmtp/ChangeLog,v 1.137 2012/10/22 09:46:04 radhermit Exp $
+
+  22 Oct 2012; Tim Harder <radhermit@gentoo.org> -msmtp-1.4.29.ebuild:
+  Remove old.
 
 *msmtp-1.4.30 (22 Oct 2012)
 
