--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.455 2012/10/21 07:48:32 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.456 2012/10/22 10:14:31 tommy Exp $
+
+  22 Oct 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  enlightenment.eclass:
+  Enable verbose output
 
   21 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
   gst-plugins-base.eclass:
