--- a/www-apps/drupal/ChangeLog
+++ b/www-apps/drupal/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/drupal
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/drupal/ChangeLog,v 1.85 2012/08/02 03:11:09 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/drupal/ChangeLog,v 1.86 2012/10/22 10:19:31 radhermit Exp $
+
+*drupal-7.16 (22 Oct 2012)
+
+  22 Oct 2012; Tim Harder <radhermit@gentoo.org> +drupal-7.16.ebuild:
+  Version bump.
 
 *drupal-7.15 (02 Aug 2012)
 
