--- a/www-apps/drupal/ChangeLog
+++ b/www-apps/drupal/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-apps/drupal
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/drupal/ChangeLog,v 1.86 2012/10/22 10:19:31 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/drupal/ChangeLog,v 1.87 2012/10/22 10:20:17 radhermit Exp $
+
+  22 Oct 2012; Tim Harder <radhermit@gentoo.org> -drupal-6.25.ebuild,
+  -drupal-7.12.ebuild, -drupal-7.14.ebuild:
+  Remove old.
 
 *drupal-7.16 (22 Oct 2012)
 
