--- a/media-sound/lilypond/ChangeLog
+++ b/media-sound/lilypond/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/lilypond
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/lilypond/ChangeLog,v 1.130 2012/10/13 17:44:01 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/lilypond/ChangeLog,v 1.131 2012/10/22 10:22:44 radhermit Exp $
+
+*lilypond-2.17.5 (22 Oct 2012)
+
+  22 Oct 2012; Tim Harder <radhermit@gentoo.org> +lilypond-2.17.5.ebuild:
+  Version bump.
 
   13 Oct 2012; Tim Harder <radhermit@gentoo.org> -lilypond-2.17.1.ebuild,
   -lilypond-2.17.2.ebuild:
