--- a/media-sound/lilypond/ChangeLog
+++ b/media-sound/lilypond/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/lilypond
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/lilypond/ChangeLog,v 1.131 2012/10/22 10:22:44 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/lilypond/ChangeLog,v 1.132 2012/10/22 10:23:43 radhermit Exp $
+
+  22 Oct 2012; Tim Harder <radhermit@gentoo.org> -lilypond-2.17.3.ebuild,
+  -lilypond-2.17.4.ebuild:
+  Remove old.
 
 *lilypond-2.17.5 (22 Oct 2012)
 
