--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7049 2012/10/22 06:51:16 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7050 2012/10/22 12:21:47 pinkbyte Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  22 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> package.mask:
+  Mask net-misc/libteam snapshot ebuilds until release
 
   22 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
   targets/desktop/package.use:
