--- a/sys-apps/flashrom/ChangeLog
+++ b/sys-apps/flashrom/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/flashrom
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/flashrom/ChangeLog,v 1.27 2012/10/25 14:27:18 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/flashrom/ChangeLog,v 1.28 2012/10/25 19:03:49 idl0r Exp $
+
+*flashrom-0.9.6.1 (25 Oct 2012)
+
+  25 Oct 2012; Christian Ruppert <idl0r@gentoo.org> +flashrom-0.9.6.1.ebuild:
+  Version bump
 
   25 Oct 2012; Anthony G. Basile <blueness@gentoo.org> flashrom-0.9.6.ebuild:
   stable arm, bug #439552
