--- a/net-misc/rygel/ChangeLog
+++ b/net-misc/rygel/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/rygel
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/rygel/ChangeLog,v 1.27 2012/10/04 15:02:02 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/rygel/ChangeLog,v 1.28 2012/10/25 20:57:50 eva Exp $
+
+  25 Oct 2012; Gilles Dartiguelongue <eva@gentoo.org> rygel-0.14.3.ebuild,
+  rygel-0.14.3-r1.ebuild:
+  Pin gstreamer dependencies to slot 0.10.
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> rygel-0.14.3.ebuild:
   Stable for amd64, wrt bug #427544
