--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7063 2012/10/25 18:09:38 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7064 2012/10/25 21:19:46 eva Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  25 Oct 2012; Gilles Dartiguelongue <eva@gentoo.org> package.mask:
+  Add mask for new rhythmbox.
 
   25 Oct 2012; Pacho Ramos <pacho@gentoo.org> package.mask:
   Mask >=app-mobilephone/obexd-0.47 as recommended in distributor-list at gnome
