--- a/dev-libs/boost/ChangeLog
+++ b/dev-libs/boost/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/boost
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.264 2012/10/21 09:08:50 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.265 2012/10/25 22:04:33 floppym Exp $
+
+  25 Oct 2012; Mike Gilbert <floppym@gentoo.org> boost-1.48.0-r2.ebuild,
+  boost-1.49.0-r1.ebuild, boost-1.50.0-r2.ebuild:
+  Byte-compile Python modules. Create mpi.py for Boost >=1.50. Backported from
+  Progress Overlay. Patch by Arfrever.
 
   21 Oct 2012; Markus Meier <maekke@gentoo.org> boost-1.49.0-r1.ebuild:
   x86 stable, bug #425354
