--- a/dev-libs/boost/ChangeLog
+++ b/dev-libs/boost/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for dev-libs/boost
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.265 2012/10/25 22:04:33 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.266 2012/10/25 22:28:45 floppym Exp $
+
+*boost-1.51.0 (25 Oct 2012)
+
+  25 Oct 2012; Mike Gilbert <floppym@gentoo.org> +boost-1.51.0.ebuild,
+  +files/boost-1.51.0-respect_python-buildid.patch,
+  +files/boost-1.51.0-support_dots_in_python-buildid.patch:
+  Version bump. Backported from Progress Overlay. Ebuild and patches by
+  Arfrever.
 
   25 Oct 2012; Mike Gilbert <floppym@gentoo.org> boost-1.48.0-r2.ebuild,
   boost-1.49.0-r1.ebuild, boost-1.50.0-r2.ebuild:
